--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,12 @@ flatlaf-intellij-themes-0.38.jar
 FileReaderSplitLines.iml
 .idea
 out
+resources/meguminSmug.png
+resources/external-content.duckduckgo.com.jpg
+resources/Megumin.jpg
+resources/external-content.duckduckgo.com.jpg
+Othet/IconInfo.txt
+Othet/License.txt
+Othet/meguminSmug.png
+Othet/meguminSmug2.png
+resources/external-content.duckduckgo.com.jpg
