--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ Othet/License.txt
 Othet/meguminSmug.png
 Othet/meguminSmug2.png
 resources/external-content.duckduckgo.com.jpg
+resources/License.txt
