--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ Othet/meguminSmug.png
 Othet/meguminSmug2.png
 resources/external-content.duckduckgo.com.jpg
 resources/License.txt
+resources/Megumin.jpg
+resources/external-content.duckduckgo.com.jpg
